--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1> new app </h1>
+<h2>coool</h2>
 <button>click</button>
 <script type="text/javascript" src = " script.js"></script>
 </body>
